# bazel-pyright

./: .bazelignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  defs.bzl  gazelle_python.yaml  requirements.in  requirements_lock.txt
.github/workflows/: test.yml
pyright/: BUILD.bazel  pyright_runner.py
tests/: BUILD.bazel  defs.bzl  failing_types.py  lib.py  lib_test.py  main_entry.py  passing_types.py  strict_types.py  types_failing.py  types_passing.py
