load("@gazelle//:def.bzl", "gazelle", "gazelle_binary", "gazelle_test")
load("@pip//:requirements.bzl", "all_whl_requirements")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

# Modules mapping for gazelle
modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

# Gazelle Python manifest
gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "pip",
    requirements = "//:requirements_lock.txt",
)

# Gazelle binary with Python extension
gazelle_binary(
    name = "gazelle_bin",
    languages = ["@rules_python_gazelle_plugin//python"],
)

# Gazelle target for updating BUILD files
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

gazelle_test(
    name = "gazelle_up_to_date",
    workspace = "//:BUILD.bazel",
)
