module(
    name = "bazel-pyright",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.40.0")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "rules_js", version = "2.1.1")
bazel_dep(name = "aspect_rules_js", version = "2.1.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
