module(
    name = "rules-pyright",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0", dev_dependency = True)
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.40.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.39.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.50.1", dev_dependency = True)
bazel_dep(name = "rules_nodejs", version = "6.3.2")

rules_pyright_python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
rules_pyright_python.toolchain(
    python_version = "3.11",
)

rules_pyright_node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
rules_pyright_node.toolchain(node_version = "20.11.1")

rules_pyright_pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
rules_pyright_pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(rules_pyright_pip, "pip")

# Download pyright npm package directly
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "pyright",
    urls = ["https://registry.npmjs.org/pyright/-/pyright-1.1.407.tgz"],
    sha256 = "24f3e5481fe638415622774c0ba0fc949dc560e2baab0d604c6d67f10bb3c0a4",
    strip_prefix = "package",
    build_file_content = """
exports_files(["index.js"])

filegroup(
    name = "pyright_files",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
""",
)
