load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("//:defs.bzl", "pyright_test")

# Test with correct types - should pass
pyright_test(
    name = "passing_lib_pyright_test",
    srcs = ["passing_types.py"],
)

# Test with type errors - should fail
pyright_test(
    name = "failing_lib_pyright_test",
    srcs = ["failing_types.py"],
    tags = ["manual"],  # Don't run this by default since it's expected to fail
)

pyright_test(
    name = "failing_types_pyright_test",
    srcs = ["failing_types.py"],
    tags = ["manual"],  # Don't run by default since it's expected to fail
)

pyright_test(
    name = "passing_types_pyright_test",
    srcs = ["passing_types.py"],
)

pyright_test(
    name = "main_entry_binary_pyright_test",
    srcs = ["main_entry.py"],
)

# Test with strict type checking - should pass with proper types
pyright_test(
    name = "strict_lib_pyright_test",
    srcs = ["strict_types.py"],
    pyrightconfig = "pyrightconfig_strict.json",
)

# Test that implicit Any fails with strict mode (expected to fail)
pyright_test(
    name = "strict_fail_lib_pyright_test",
    srcs = ["passing_types.py"],
    pyrightconfig = "pyrightconfig_strict.json",
    tags = ["manual"],  # Don't run by default since it's expected to fail
)
