load("//tests:defs.bzl", "py_binary", "py_library", "py_test")

# gazelle:python_generation_mode file
# gazelle:map_kind py_binary py_binary //tests:defs.bzl
# gazelle:map_kind py_library py_library //tests:defs.bzl
# gazelle:map_kind py_test py_test //tests:defs.bzl

py_library(
    name = "lib",
    srcs = ["lib.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "main_entry",
    srcs = ["main_entry.py"],
    visibility = ["//:__subpackages__"],
)

py_library(
    name = "types_failing",
    srcs = ["types_failing.py"],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
    deps = [":lib"],
)

py_binary(
    name = "types_passing",
    srcs = ["types_passing.py"],
    visibility = ["//:__subpackages__"],
    deps = [":lib"],
)

py_binary(
    name = "types_strict",
    srcs = ["types_strict.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "lib_test",
    srcs = ["lib_test.py"],
    deps = [":lib"],
)
